# molecular_qm_workflow

./: .flake8  Makefile  README.md  env_setup.md  environment.yml  install_aimnet2calc.sh  manage_env.sh  mqc_env_full.yml  pyproject.toml  requirements.txt
.attic/: mqc_env_1.yml
.github/workflows/: unittests.yml
cmdline/: mqc_runner.py  s3_util.py  slurm_runner.py  triton_from_xyz.py  triton_runner.py  wasabi_util
docker/: Dockerfile.cpu  Dockerfile.gpu  example_config.yaml  requirements-gpu.txt  run.py
mqc_pipeline/: __init__.py  adaptors.py  batch_optimize.py  common.py  constants.py  db_util.py  file_util.py  get_3d_structures.py  import_util.py  optimize.py  property.py  settings.py  smiles_util.py  structure_io.py  test_util.py  util.py  validate.py
mqc_pipeline/_aimnet/: aev.py  aimnet2.py  aimnet2.yaml  config.py  constants.py  core.py  enhanced_output.py  lr.py  ops.py  property_inference.py
mqc_pipeline/aimnet2calc/: README.md  __init__.py  aimnet2ase.py  calculator.py
mqc_pipeline/property/: ElementCombustionData.csv  __init__.py  bde.py  combustion_heat.py  esp.py  keys.py  property.py  stability.py  volume.py
mqc_pipeline/workflow/: io.py  pipeline.py  postprocess.py  triton_pipeline.py  triton_server_util.py
tests/: adaptors_test.py  batch_optimize_test.py  bde_test.py  combustion_heat_test.py  common_test.py  conftest.py  file_util_test.py  get_3d_structures_test.py  optimize_test.py  settings_test.py  smiles_util_test.py  stability_test.py  structure_io_test.py  validate_test.py  workflow_io_test.py
tests/data/: ethylene_carbonate_anion.molden
