[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqc_pipeline"
version = "0.1.0"
authors = [
    { name="Renke Huang", email="renke.huang@ses.ai" },
]
description = "High-throughput molecular quantum chemistry (MQC) pipeline"
readme = "README.md"
# Dependencies are managed by environment.yml with micromamba
dependencies = []
license = {text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["quantum chemistry", "computational chemistry", "chemoinformatics"]

[project.urls]
homepage = "https://github.com/Solid-Energy-Systems/mqc_pipeline"

# [project.scripts]
# run_mqc_pipeline = "cmdline.main:run" # generate an executable `run_mqc_pipeline` in bin

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
# temporary restore the old dependencies list for GH unittests workflow
cpu_test = [
    "pytest>=7.0.0",
    "numpy >= 1.20.0",
    "scipy>=1.6.0",
    "pandas>=2.2.3",
    "pyarrow",
    'pydantic >= 1.10',
    'PyYAML >= 6.0',
    'h5py >= 3.0',
    'rdkit',
    'ase',
    'pyscf > 2.5.0',
    'geometric', # for geometry optimization
]
dev = [
    "pytest>=7.0.0",
]
# Example use: pip install .[gpu]
gpu = [
    # Compatible with CUDA Version: 12.4
    "gpu4pyscf-cuda12x",
    "cutensor-cu12",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cu124"

[tool.pytest.ini_options]
addopts = "--durations=10 --durations-min=0"
testpaths = ["tests"]

[tool.pytest.ini_options.env]
PYTHONDONTWRITEBYTECODE = "1"

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/tests/*",
]

